[fix] make modal scroll more smothly on mobile device

--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -55,6 +55,9 @@
     }
 
     .content {
+      overflow-x: hidden;
+      -webkit-overflow-scrolling: touch;
+
       @extend %flex-center;
 
       @include for-phone-only {
